src/test/deca/context/invalid/expr_cast_int_to_null.deca
// Test de la règle (3.39) : on ne peut pas cast de int vers null.
{
	null var1;
	int var2;
	var1 = (null)(var2);
}

// Résultat :
//# a
